fix(ld-checkbox): disabled background color on mobile safari

--- a/src/liquid/components/ld-checkbox/ld-checkbox.css
+++ b/src/liquid/components/ld-checkbox/ld-checkbox.css
@@ -41,12 +41,13 @@
 
   input {
     appearance: none;
-    position: absolute;
-    inset: 0;
-    z-index: 1;
-    width: 100%;
+    background-color: transparent; /* Required for Mobile Sarari */
     height: 100%;
+    inset: 0;
     margin: 0;
+    position: absolute;
+    width: 100%;
+    z-index: 1;
 
     &:checked {
       ~ .ld-checkbox__check {
